Finished the form, and JS mostly I believe. Now we have to work on the shelf, and add all books to it.

--- a/style.css
+++ b/style.css
@@ -83,3 +83,10 @@ form input
     border: 2px solid black;
     cursor: pointer;
 }
+
+.shelf-area
+{
+    display: grid;
+    background-color: #7c3f00;
+    grid-area: 1 / 2 / 5 / 3;
+}
