Finished fixing the book showing up with info for each we added. Now all we need to work on is: A delete function to delete books, a close button on the add book, an is read label and then we should be good.

--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ form input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     grid-template-rows: 1fr;
     justify-content: center;
     align-items: center;
+    text-align: center;
     flex-direction: row;
     font-style: italic;
 }
